--- a/classy-cate.css
+++ b/classy-cate.css
@@ -2,3 +2,35 @@
  * Name: Classy CATE
  * Author: Peter Hamilton
  */
+
+.navbar {
+  margin-top: 15px;
+}
+
+.profile-picture-container {
+  max-width: 180px;
+}
+
+a i {
+  font-size: 20px;
+}
+
+.list-text {
+  margin-left: 30px;
+}
+
+.list-icon-container {
+  float: left
+}
+
+.section-header {
+  margin-top: 0;
+  font-size: 30px;
+}
+
+.footer {text-align: center;
+    padding: 30px 0;
+    margin-top: 70px;
+    border-top: 1px solid #E5E5E5;
+    background-color: whiteSmoke;
+}
