--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -20,6 +20,10 @@ a i {
   font-size: 20px;
 }
 
+.centered {
+  text-align: center;
+}
+
 .list-text {
   margin-left: 30px;
 }
@@ -36,9 +40,13 @@ a i {
 .footer {
   text-align: center;
   padding: 30px 0;
-  margin-top: 70px;
+  margin-top: 40px;
   border-top: 1px solid #E5E5E5;
   background-color: whiteSmoke;
+}
+
+#old-cate-button-container {
+  margin-top: 20px;
 }
 
 select {
