Change button text when clicked

--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -19,6 +19,7 @@ activate_nostalgia_mode = ->
     $(elem).css('background', random_nostalgia_color)
 
   $('#old-cate-button').unbind()
+  $('#old-cate-button').html("Mother of God, make it stop!")
   $('#old-cate-button').bind 'click', ->
     alert('Nope, you made your bed, now lie in it...')
 
