--- a/views/layout.haml
+++ b/views/layout.haml
@@ -27,7 +27,7 @@
                 %span Change Year
                 %b.caret
               %ul#cc-year-dropdown.dropdown-menu{:role => "menu"}
-  =yield
+  #main-page-content
 %footer.footer
   .container
     %p
