Fixed broken grades link

--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -95,7 +95,7 @@ construct_layout = (vars) ->
 
   $('#cc-version').html(vars.version)
   $('#nav-exercises').attr('href', vars.timetable_url)
-  $('#nav-grades').attr('href', vars.grading_schema_link)
+  $('#nav-grades').attr('href', vars.individual_records_link)
   $('#cc-current-year').html("(#{vars.current_year})")
 
 construct_main_page = (vars) ->
