N/A exercises get a pretty "Passing Judgement" icon.

--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -256,7 +256,7 @@ populate_grades_page = (vars) ->
           when ""
             exercise_elem.find('.exercise-grade-container').html("No Record")
           when "n/a"
-            exercise_elem.find('.exercise-grade-container').html("N/A")
+            exercise_elem.find('.exercise-grade-container').html('<i class="icon-legal" />')
           when "N/P"
             exercise_elem.find('.exercise-grade-container').html('<i class="icon-lock" />')
           else
