--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -256,9 +256,9 @@ populate_grades_page = (vars) ->
           when ""
             exercise_elem.find('.exercise-grade-container').html("No Record")
           when "n/a"
-            exercise_elem.find('.exercise-grade-container').html('<i class="icon-legal" />')
+            exercise_elem.find('.exercise-grade-container').html('<i class="icon-legal" /> Awaiting Marking')
           when "N/P"
-            exercise_elem.find('.exercise-grade-container').html('<i class="icon-lock" />')
+            exercise_elem.find('.exercise-grade-container').html('<i class="icon-lock" /> Marked, Not Published')
           else
             exercise_elem.find('.progress').addClass(grade_to_class(exercise.grade))
             exercise_elem.find('.progress .bar').css('width', grade_to_width(exercise.grade))
