--- a/views/layout.haml
+++ b/views/layout.haml
@@ -31,6 +31,10 @@
               %ul#cc-year-dropdown.dropdown-menu{:role => "menu"}
   #page-content
 
+.row
+  .span12
+    #old-cate-button-container.span12.centered
+      %span#old-cate-button.btn.btn-mini But I liked the old CATE!
 %footer.footer
   .container
     %p
