Make all grade columns the same, more consistent

--- a/views/grades_page.haml
+++ b/views/grades_page.haml
@@ -30,7 +30,7 @@
         %span.exercise-extension
       %td
         %span.exercise-submission
-      %td{:style => "min-width: 100px"}
+      %td.grade-column
         .exercise-grade-container
           .progress
             .bar
