Make the header have the grade-column class

--- a/views/grades_page.haml
+++ b/views/grades_page.haml
@@ -11,7 +11,7 @@
           %th Declaration
           %th Extension
           %th Submission
-          %th Grade
+          %th.grade-column Grade
 
 #exercise_template.hidden
   %table
@@ -30,7 +30,7 @@
         %span.exercise-extension
       %td
         %span.exercise-submission
-      %td.grade-column
+      %td
         .exercise-grade-container
           .progress
             .bar
