--- a/views/layout.haml
+++ b/views/layout.haml
@@ -42,7 +42,7 @@
       %a{:href => "http://www.inspiredpixel.net"} Peter Hamilton &nbsp;
       %a{:href => "http://www.twitter.com/peterejhamilton"}
         %i.icon-twitter &nbsp;
-      %a{:href => "http://www.github.com/peterejhamilton"}
+      %a{:href => "http://www.github.com/peterhamilton"}
         %i.icon-github &nbsp;
     %p
       Help lessen the pain - &nbsp;
